@@ -100,6 +100,9 @@ BUGFIXES:
   ZOOKEEPER-562. c client can flood server with pings if tcp send queue
   filled. (ben reed via mahadev)
 
+  ZOOKEEPER-537. The zookeeper jar includes the java source files
+  (Thomas Dudziak via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
